Structure and potential scripts for the dissertation project method and code

--- a/notebooks/QPCA vs PCA.ipynb
+++ b/notebooks/QPCA vs PCA.ipynb
@@ -170,7 +170,7 @@
     "\n",
     "# Visualize the classical PCA result using seaborn\n",
     "plt.rcParams[\"figure.figsize\"] = (6, 6)\n",
-    "sns.scatterplot(x=features_reduced_classical[:, 0], y=features_reduced_classical[:, 1], hue=labels, palette=\"tab10\")\n",
+    "sns.scatterpl1ot(x=features_reduced_classical[:, 0], y=features_reduced_classical[:, 1], hue=labels, palette=\"tab10\")\n",
     "plt.title(\"Classical PCA reduced features (2D)\")\n",
     "plt.show()\n",
     "\n",
